--- a/src/main/resources/demo/index.html
+++ b/src/main/resources/demo/index.html
@@ -12,7 +12,7 @@
     <style type="text/css">
         /*背景图片*/
         body {
-            background-image: url("img/timg.jpg");
+            background-image: url("img/index.jpg");
             background-attachment: fixed;
             background-size: 100% 100%;
         }
@@ -55,42 +55,45 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <!--轮播图-->
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">
-            <!-- 圆点 -->
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>
-                <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
-            </ol>
-            <!-- 图片 -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item">
-                    <img src="img/hanxiaoxing.gif" alt="error" class="img-responsive center-block">
-                    <div class="carousel-caption">
-                    </div>
-                </div>
-                <div class="item active">
-                    <img src="img/hyosunghan.gif" alt="error" class="img-responsive center-block">
-                    <div class="carousel-caption">
-                    </div>
-                </div>
-                <!--<div class="item">-->
-                <!--<img src="img/hanxiaoxing.gif" alt="error" class="img-responsive center-block">-->
-                <!--<div class="carousel-caption">-->
-                <!--</div>-->
-                <!--</div>-->
-            </div>
-            <!-- 翻页 -->
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        <div align="center">
+            <img src="img/hyosunghan.gif"/>
         </div>
+        <!--&lt;!&ndash;轮播图&ndash;&gt;-->
+        <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">-->
+            <!--&lt;!&ndash; 圆点 &ndash;&gt;-->
+            <!--<ol class="carousel-indicators">-->
+                <!--<li data-target="#carousel-example-generic" data-slide-to="0"></li>-->
+                <!--<li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>-->
+                <!--&lt;!&ndash;<li data-target="#carousel-example-generic" data-slide-to="2"></li>&ndash;&gt;-->
+            <!--</ol>-->
+            <!--&lt;!&ndash; 图片 &ndash;&gt;-->
+            <!--<div class="carousel-inner" role="listbox">-->
+                <!--<div class="item">-->
+                    <!--<img src="img/hanxiaoxing.gif" alt="error" class="img-responsive center-block">-->
+                    <!--<div class="carousel-caption">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="item active">-->
+                    <!--<img src="img/hyosunghan.gif" alt="error" class="img-responsive center-block">-->
+                    <!--<div class="carousel-caption">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;<div class="item">&ndash;&gt;-->
+                <!--&lt;!&ndash;<img src="img/hanxiaoxing.gif" alt="error" class="img-responsive center-block">&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="carousel-caption">&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--</div>-->
+            <!--&lt;!&ndash; 翻页 &ndash;&gt;-->
+            <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">-->
+                <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+                <!--<span class="sr-only">Previous</span>-->
+            <!--</a>-->
+            <!--<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">-->
+                <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+                <!--<span class="sr-only">Next</span>-->
+            <!--</a>-->
+        <!--</div>-->
     </div>
     <div class="row">
         <form class="col-lg-8 col-lg-offset-2" role="form" name="bdfm"
