--- a/src/main/resources/demo/index.html
+++ b/src/main/resources/demo/index.html
@@ -141,70 +141,22 @@
         </form>
     </div>
     <br>
-    <div class="row">
+	<div class="row">
         <div
-                class="col-lg-2 col-md-3 col-sm-3 col-xs-6 col-lg-offset-2">
-            <button class="btn btn-lg btn-block btn-primary dropdown-toggle"
-                    data-toggle="dropdown">
-                腾讯<span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="http://www.qq.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-home"></span>腾讯</a></li>
-                <li class="divider"></li>
-                <li><a href="http://wx.qq.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-qrcode"></span>微信</a></li>
-                <li><a href="https://v.qq.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-film"></span>视频</a></li>
-                <li><a href="https://qzone.qq.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-star"></span>空间</a></li>
-                <li><a href="https://mail.qq.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-envelope"></span>邮箱</a></li>
-            </ul>
+                class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group col-lg-offset-2">
+            <a href="http://wx.qq.com/"
+               class="btn btn-success btn-lg btn-block">微信</a>
         </div>
-        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
-            <button class="btn btn-lg btn-block btn-warning dropdown-toggle"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                新浪<span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a href="http://www.sina.com.cn/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-home"></span>新浪</a></li>
-                <li class="divider"></li>
-                <li><a href="http://weibo.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-fire"></span>微博</a></li>
-                <li><a href="http://blog.sina.com.cn/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-bold"></span>博客</a></li>
-
-            </ul>
+        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
+            <a href="https://mail.qq.com/"
+               class="btn btn-primary btn-lg btn-block">QQ邮箱</a>
         </div>
-        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
-            <button class="btn btn-lg btn-block btn-warning dropdown-toggle"
-                    data-toggle="dropdown">
-                搜狐<span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="http://www.sohu.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-home"></span>搜狐</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.sogou.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-link"></span>搜狗</a></li>
-            </ul>
+        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
+            <a href="http://music.163.com/" class="btn btn-danger btn-lg btn-block">网易云音乐</a>
         </div>
-        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
-            <button class="btn btn-lg btn-block btn-danger dropdown-toggle"
-                    data-toggle="dropdown">
-                网易<span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dLabel">
-                <li><a href="http://www.163.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-home"></span>网易</a></li>
-                <li class="divider"></li>
-                <li><a href="http://music.163.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-cd"></span>音乐</a></li>
-                <li><a href="https://email.163.com/" class="btn btn-lg"><span
-                        class="glyphicon glyphicon-envelope"></span>邮箱</a></li>
-            </ul>
+        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
+            <a href="http://weibo.com/"
+               class="btn btn-warning btn-lg btn-block">微博</a>
         </div>
     </div>
     <br>
@@ -214,16 +166,16 @@
             <a href="http://www.taobao.com/"
                class="btn btn-warning btn-lg btn-block">淘宝</a>
         </div>
+		<div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
+            <a href="http://www.jd.com/" class="btn btn-danger btn-lg btn-block">京东</a>
+        </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
             <a href="http://www.youku.com/"
                class="btn btn-success btn-lg btn-block">优酷</a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.jd.com/" class="btn btn-danger btn-lg btn-block">京东</a>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.iqiyi.com/"
-               class="btn btn-success btn-lg btn-block">爱奇艺</a>
+            <a href="https://v.qq.com/"
+               class="btn btn-success btn-lg btn-block">腾讯视频</a>
         </div>
     </div>
     <br>
