--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <base target="_blank">
     <title>HomePage</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="index/js/jquery.min.js"></script>
+    <script src="index/js/bootstrap.min.js"></script>
     <style type="text/css">
         /*背景图片*/
         body {
-            background-image: url("img/index.jpg");
+            background-image: url("index/img/index.jpg");
             background-attachment: fixed;
             background-size: 100% 100%;
         }
@@ -56,7 +56,7 @@
 <div class="container-fluid">
     <div class="row">
         <div align="center">
-            <img src="img/hyosunghan.gif"/>
+            <img src="index/img/hyosunghan.gif"/>
         </div>
         <!--&lt;!&ndash;轮播图&ndash;&gt;-->
         <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">-->
@@ -225,7 +225,7 @@
     <br> <br> <br> <br>
     <div class="row">
         <div class="col-lg-5 col-md-4 col-ms-3 col-xs-2">
-            <img src="img/head.png" alt="error" class="img-circle">
+            <img src="index/img/head.png" alt="error" class="img-circle">
         </div>
         <div class="col-lg-7 col-md-8 col-ms-9 col-xs-10">
             <a href="#">Whistleblowing</a>&nbsp;&nbsp;&nbsp;<a href="#">Partnership</a>
