--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <title>HomePage</title>
-    <link href="index/jscss/bootstrap.min.css" rel="stylesheet">
+    <link href="index/css/bootstrap.min.css" rel="stylesheet">
     <script src="index/js/jquery.min.js"></script>
     <script src="index/js/bootstrap.min.js"></script>
     <style type="text/css">
