--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
         </div>
         <div
                 class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.huaweicloud.com/"
-               class="btn btn-danger btn-lg btn-block">华为云</a>
+            <a href="https://docs.openstack.org/"
+               class="btn btn-danger btn-lg btn-block">OpenStack</a>
         </div>
     </div>
     <br> <br> <br> <br>
