--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
             <img src="index/img/head.png" alt="error" class="img-circle">
         </div>
         <div class="col-lg-7 col-md-8 col-ms-9 col-xs-10">
-            <a href="#">Whistleblowing</a>&nbsp;&nbsp;&nbsp;<a href="#">Partnership</a>
-            &nbsp;&nbsp;&nbsp;<a href="#">About Us</a>
+            <a href="#">Whistleblowing</a>&nbsp;&nbsp;&nbsp;
+			<a href="#">Partnership</a>&nbsp;&nbsp;&nbsp;
+			<a href="#">About Us</a>
             <br>Copyright&copy;Hyosung,All Rights Reserved.
         </div>
     </div>
