--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style type="text/css">
         /*背景图片*/
         body {
-            background-image: url("index/img/index.jpg");
+            background-image: url("index/img/timg.jpg");
             background-attachment: fixed;
             background-size: 100% 100%;
         }
@@ -55,10 +55,10 @@
 <body>
 <div class="container-fluid">
     <!--签名或轮播图-->
-    <!--<div class="row">-->
-        <!--<div align="center">-->
-            <!--<img src="index/img/hyosunghan.gif"/>-->
-        <!--</div>-->
+    <div class="row">
+        <div align="center">
+            <img src="index/img/sjnh.gif"/>
+        </div>
         <!--&lt;!&ndash;轮播图&ndash;&gt;-->
         <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">-->
             <!--&lt;!&ndash; 圆点 &ndash;&gt;-->
@@ -95,8 +95,7 @@
                 <!--<span class="sr-only">Next</span>-->
             <!--</a>-->
         <!--</div>-->
-    <!--</div>-->
-    <br> <br> <br> <br> <br> <br> <br> <br>
+    </div>
     <div class="row">
         <form class="col-lg-8 col-lg-offset-2" role="form" name="bdfm"
               method="get" action="http://www.baidu.com/s?word">
