--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="zh-CN">
+<html lang="zh-CN">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <base target="_blank">
     <title>HomePage</title>
     <link href="index/css/bootstrap.min.css" rel="stylesheet">
@@ -22,33 +22,31 @@
             font-family: fantasy;
         }
 
-        /*友情链接，版权信息，输入框-字体*/
-        .col-lg-7, .col-lg-7 a, input {
+        /*版权信息，输入框-字体*/
+        .copyright, input {
             font-family: times;
-            font-size: 1;
             color: #000000;
         }
 
-        /*下拉菜单图标居左*/
+        /*按钮图标居左*/
         a .glyphicon {
             float: left;
         }
 
-        /*下拉内容对齐父按钮*/
+        /*下拉菜单对齐父按钮*/
         .dropdown-menu {
             left: 14px;
         }
 
-        /*落款头像位置*/
-        .col-lg-5 {
-            /* border-right: 1px solid; */
-            text-align: right;
-        }
-
         /*落款头像大小*/
         .img-circle {
-            width: 40px;
-            height: 40px;
+            width: 80px;
+            height: 80px;
+        }
+
+        /*版权文字颜色*/
+        strong {
+            color: #000000;
         }
     </style>
 </head>
@@ -144,107 +142,131 @@
     <br>
 	<div class="row">
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group col-lg-offset-2">
-            <a href="http://wx.qq.com/" class="btn btn-success btn-lg btn-block">微信</a>
+            <a href="http://wx.qq.com/" class="btn btn-success btn-lg btn-block">
+                <span class="glyphicon glyphicon-user"></span>微信
+            </a>
         </div>
 		<div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.alipay.com/" class="btn btn-primary btn-lg btn-block">支付宝</a>
+            <a href="http://www.alipay.com/" class="btn btn-primary btn-lg btn-block">
+                <span class="glyphicon glyphicon-credit-card"></span>支付宝
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://pan.baidu.com/" class="btn btn-primary btn-lg btn-block">百度网盘</a>
+            <a href="http://pan.baidu.com/" class="btn btn-primary btn-lg btn-block">
+                <span class="glyphicon glyphicon-hdd"></span>百度网盘
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://music.163.com/" class="btn btn-danger btn-lg btn-block">网易云音乐</a>
+            <a href="http://music.163.com/" class="btn btn-danger btn-lg btn-block">
+                <span class="glyphicon glyphicon-cd"></span>网易云音乐
+            </a>
         </div>
     </div>
     <br>
     <div class="row">
 		<div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group col-lg-offset-2">
-            <a href="http://www.jd.com/" class="btn btn-danger btn-lg btn-block">京东</a>
+            <a href="http://www.jd.com/" class="btn btn-danger btn-lg btn-block">
+                <span class="glyphicon glyphicon-shopping-cart"></span>京东
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.taobao.com/" class="btn btn-warning btn-lg btn-block">淘宝</a>
+            <a href="http://www.taobao.com/" class="btn btn-warning btn-lg btn-block">
+                <span class="glyphicon glyphicon-shopping-cart"></span>淘宝
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.youku.com/" class="btn btn-success btn-lg btn-block">优酷</a>
+            <a href="http://www.youku.com/" class="btn btn-success btn-lg btn-block">
+                <span class="glyphicon glyphicon-play-circle"></span>优酷
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="https://v.qq.com/" class="btn btn-success btn-lg btn-block">腾讯视频</a>
+            <a href="https://v.qq.com/" class="btn btn-success btn-lg btn-block">
+                <span class="glyphicon glyphicon-film"></span>腾讯视频
+            </a>
         </div>
     </div>
     <br>
     <div class="row">
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group  col-lg-offset-2">
-            <a href="http://www.douyu.com/" class="btn btn-warning btn-lg btn-block">斗鱼TV</a>
+            <a href="http://www.douyu.com/" class="btn btn-warning btn-lg btn-block">
+                <span class="glyphicon glyphicon-facetime-video"></span>斗鱼
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.zhaikexueyuan.com/" class="btn btn-primary btn-lg btn-block">宅客学院</a>
+            <a href="http://www.zhaikexueyuan.com/" class="btn btn-primary btn-lg btn-block">
+                <span class="glyphicon glyphicon-blackboard"></span>宅客学院
+            </a>
         </div>
 		<div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://weibo.com/" class="btn btn-warning btn-lg btn-block">微博</a>
+            <a href="http://weibo.com/" class="btn btn-warning btn-lg btn-block">
+                <span class="glyphicon glyphicon-eye-open"></span>微博
+            </a>
         </div>
 		<div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="https://mail.qq.com/" class="btn btn-primary btn-lg btn-block">QQ邮箱</a>
+            <a href="https://mail.qq.com/" class="btn btn-primary btn-lg btn-block">
+                <span class="glyphicon glyphicon-envelope"></span>QQ邮箱
+            </a>
         </div>
     </div>
     <br>
     <div class="row">
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group col-lg-offset-2">
-            <a href="http://www.csdn.net/" class="btn btn-danger btn-lg btn-block">CSDN</a>
+            <a href="http://www.csdn.net/" class="btn btn-danger btn-lg btn-block">
+                <span class="glyphicon glyphicon-comment"></span>CSDN
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.w3cschool.cn" class="btn btn-danger btn-lg btn-block">W3Cschool</a>
+            <a href="http://www.w3cschool.cn" class="btn btn-danger btn-lg btn-block">
+                <span class="glyphicon glyphicon-tasks"></span>W3Cschool
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="https://github.com/" class="btn btn-success btn-lg btn-block">GitHub</a>
+            <a href="https://github.com/" class="btn btn-success btn-lg btn-block">
+                <span class="glyphicon glyphicon-open"></span>GitHub
+            </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="https://www.bmob.cn/" class="btn btn-warning btn-lg btn-block">Bmob</a>
+            <a href="https://www.bmob.cn/" class="btn btn-warning btn-lg btn-block">
+                <span class="glyphicon glyphicon-inbox"></span>Bmob
+            </a>
         </div>
     </div>
     <br> <br> <br> <br>
     <div class="row">
-        <div class="col-lg-5 col-md-4 col-ms-3 col-xs-2">
-            <img src="index/img/head.png" alt="error" class="img-circle">
+        <div align="center" class="copyright">
+            Copyright &copy;
+            <a data-toggle="modal" data-target="#myModal"><strong>HyosungHan</strong></a>,
+            All Rights Reserved.
         </div>
-        <div class="col-lg-7 col-md-8 col-ms-9 col-xs-10">
-            <a href="#">Whistleblowing</a>&nbsp;&nbsp;&nbsp;
-			<a href="#">Partnership</a>&nbsp;&nbsp;&nbsp;
-			<a href="#">About Us</a>
-            <br>Copyright&copy;Hyosung,All Rights Reserved.
+        <!-- 个人信息模态窗口 -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">Author information</h4>
+                    </div>
+                    <div class="row modal-body">
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                            <img src="index/img/head.png" alt="error" class="img-circle">
+                        </div>
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                            Name: HyosungHan<br>
+                            Region: Shaanxi,Xi'an<br>
+                            E-Mail: ihyosung@foxmail.com<br>
+                            HomePage: https://github.com/hyosunghan<br>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- 个人信息模态窗口 -->
     </div>
 </div>
-<!--<script type="text/javascript">-->
-    <!--$("body").ready(load())-->
-
-    <!--// 页面加载-->
-    <!--function load() {-->
-        <!--var input = $("#focusedInput");-->
-        <!--var random = Math.floor(Math.random() * 10);-->
-        <!--var tip = readFile("resource.txt", random);-->
-        <!--input.attr("placeholder", tip);-->
-    <!--}-->
-
-    <!--// ActiveX读文件-->
-    <!--function readFile(filename, number) {-->
-        <!--var fso = new ActiveXObject("Scripting.FileSystemObject");-->
-        <!--var f = fso.OpenTextFile(filename, 1);-->
-        <!--var s = "";-->
-        <!--while (!f.AtEndOfStream && 0 != number) {-->
-            <!--s = f.ReadLine() + "\n";-->
-            <!--number&#45;&#45;;-->
-        <!--}-->
-        <!--f.Close();-->
-        <!--return s;-->
-    <!--}-->
-
-    <!--// ActiveX写文件-->
-    <!--function writeFile(filename, filecontent) {-->
-        <!--var fso = new ActiveXObject("Scripting.FileSystemObject");-->
-        <!--var f = fso.OpenTextFile(filename, 8, true);-->
-        <!--f.WriteLine(filecontent);-->
-        <!--f.Close();-->
-    <!--}-->
-<!--</script>-->
 </body>
 </html>
