--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         /*版权文字颜色*/
-        strong {
+        em {
             color: #000000;
         }
     </style>
@@ -235,7 +235,7 @@
     <div class="row">
         <div align="center" class="copyright">
             Copyright &copy;
-            <a data-toggle="modal" data-target="#myModal"><strong>HyosungHan</strong></a>,
+            <a data-toggle="modal" data-target="#myModal"><em>HyosungHan</em></a>,
             All Rights Reserved.
         </div>
         <!-- 个人信息模态窗口 -->
