--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
             <a href="http://www.taobao.com/" class="btn btn-warning btn-lg btn-block">
-                <span class="glyphicon glyphicon-shopping-gift"></span>淘宝
+                <span class="glyphicon glyphicon-gift"></span>淘宝
             </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
