--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
             height: 80px;
         }
 
-        /*版权文字颜色*/
-        em {
+		/*版权显示样式*/
+		.copyright a {
+			cursor:pointer;
+			text-decoration:none;
+		}
+		
+        /*版权斜体文字颜色*/
+        .copyright a em {
             color: #000000;
         }
     </style>
@@ -253,10 +259,10 @@
                             <img src="index/img/head.png" alt="error" class="img-circle">
                         </div>
                         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                            Name: HyosungHan<br>
-                            Region: Shaanxi,Xi'an<br>
-                            E-Mail: ihyosung@foxmail.com<br>
-                            HomePage: https://github.com/hyosunghan<br>
+                            <strong>Name:</strong> HyosungHan<br>
+                            <strong>Region:</strong> Shaanxi,Xi'an<br>
+                            <strong>E-Mail:</strong> ihyosung@foxmail.com<br>
+                            <strong>HomePage:</strong> https://github.com/hyosunghan<br>
                         </div>
                     </div>
                     <div class="modal-footer">
