--- a/index.html
+++ b/index.html
@@ -33,27 +33,18 @@
             float: left;
         }
 
-        /*下拉菜单对齐父按钮*/
-        .dropdown-menu {
-            left: 14px;
-        }
-
         /*落款头像大小*/
         .img-circle {
             width: 80px;
             height: 80px;
         }
 
-		/*版权显示样式*/
+		/*版权链接显示样式*/
 		.copyright a {
 			cursor:pointer;
 			text-decoration:none;
+			color: #000000;
 		}
-		
-        /*版权斜体文字颜色*/
-        .copyright a em {
-            color: #000000;
-        }
     </style>
 </head>
 <body>
@@ -255,10 +246,10 @@
                         <h4 class="modal-title" id="myModalLabel">Author information</h4>
                     </div>
                     <div class="row modal-body">
-                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
                             <img src="index/img/head.png" alt="error" class="img-circle">
                         </div>
-                        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-9">
                             <strong>Name:</strong> HyosungHan<br>
                             <strong>Region:</strong> Shaanxi,Xi'an<br>
                             <strong>E-Mail:</strong> ihyosung@foxmail.com<br>
