--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.zhaikexueyuan.com/" class="btn btn-primary btn-lg btn-block">
+            <a href="http://www.zhaikexueyuan.com/" class="btn btn-warning btn-lg btn-block">
                 <span class="glyphicon glyphicon-blackboard"></span>宅客学院
             </a>
         </div>
@@ -223,7 +223,7 @@
             </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="https://www.bmob.cn/" class="btn btn-warning btn-lg btn-block">
+            <a href="https://www.bmob.cn/" class="btn btn-primary btn-lg btn-block">
                 <span class="glyphicon glyphicon-inbox"></span>Bmob
             </a>
         </div>
