--- a/index.html
+++ b/index.html
@@ -15,26 +15,24 @@
         .btn-circle-head {
             width: 60px;
             height: 60px;
+            border-radius: 30px;
             padding: 20px 20px;
             font-size: 20px;
-            line-height: 1.33;
-            border-radius: 70px;
         }
 
         /*应用按钮*/
 		.btn-circle {
 			width: 80px;
 			height: 80px;
-			padding: 30px 30px;
-			font-size: 20px;
-			line-height: 1.33;
-			border-radius: 70px;
-			background-image: url("index/img/weixin.jpg");
+            border-radius: 40px;
+            padding: 30px 30px;
+            font-size: 20px;
+            opacity:1.0;
 		}
 
         /*背景图片*/
         body {
-            background-image: url("index/img/timg.jpg");
+            background-image: url("index/img/timg2.jpg");
             background-attachment: fixed;
             background-size: 100% 100%;
         }
@@ -162,42 +160,42 @@
 	<br>
 	<div class="row">
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group col-lg-offset-2">
-            <a href="http://wx.qq.com/" class="btn btn-success btn-circle btn-block"
+            <a href="http://wx.qq.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/weixin.jpg');background-size: cover">
             </a>
         </div>
 		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.alipay.com/" class="btn btn-primary btn-circle btn-lg btn-block"
+            <a href="http://www.alipay.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/zhifubao.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://pan.baidu.com/" class="btn btn-primary btn-circle btn-lg btn-block"
+            <a href="http://pan.baidu.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/baiduyun.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://music.163.com/" class="btn btn-danger btn-circle btn-lg btn-block"
+            <a href="http://music.163.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/wangyiyun.jpg');background-size: cover">
             </a>
         </div>
 		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.jd.com/" class="btn btn-danger btn-circle btn-lg btn-block"
+            <a href="http://www.jd.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/jingdong.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.taobao.com/" class="btn btn-warning btn-circle btn-lg btn-block"
+            <a href="http://www.taobao.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/taobao.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.youku.com/" class="btn btn-success btn-circle btn-lg btn-block"
+            <a href="http://www.youku.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/youku.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="https://v.qq.com/" class="btn btn-success btn-circle btn-lg btn-block"
+            <a href="https://v.qq.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/tengxunshipin.jpg');background-size: cover">
             </a>
         </div>
@@ -205,43 +203,43 @@
     <br>
     <div class="row">
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group  col-lg-offset-2">
-            <a href="http://www.douyu.com/" class="btn btn-warning btn-circle btn-lg btn-block"
+            <a href="http://www.douyu.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/douyu.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.zhaikexueyuan.com/" class="btn btn-warning btn-circle btn-lg btn-block"
+            <a href="http://www.zhaikexueyuan.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/zhaikexueyuan.jpg');background-size: cover">
             </a>
         </div>
 		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://weibo.com/" class="btn btn-warning btn-circle btn-lg btn-block"
+            <a href="http://weibo.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/weibo.jpg');background-size: cover">
             </a>
         </div>
 		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="https://mail.qq.com/" class="btn btn-primary btn-circle btn-lg btn-block"
+            <a href="https://mail.qq.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/qqyouxiang.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.csdn.net/" class="btn btn-danger btn-circle btn-lg btn-block"
+            <a href="http://www.csdn.net/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/csdn.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://www.w3cschool.cn" class="btn btn-danger btn-circle btn-lg btn-block"
+            <a href="http://www.w3cschool.cn" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/w3cschool.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="https://github.com/" class="btn btn-success btn-circle btn-lg btn-block"
+            <a href="https://github.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/github.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
-            <a href="http://rap2.taobao.org/" class="btn btn-primary btn-circle btn-lg btn-block"
-               style="background-image: url('index/img/rap2.jpg');background-size: cover">
+            <a href="http://news.ifeng.com/" class="btn btn-primary btn-circle"
+               style="background-image: url('index/img/fenghuangxinwen.jpg');background-size: cover">
             </a>
         </div>
     </div>
